infrastructure/kafka-cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.4.0
        ports:
        - containerPort: 9092
          name: broker
        - containerPort: 9093
          name: internal
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: default
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
    name: broker
  type: ClusterIP
